[tool.poetry]
name = "api_test"
version = "0.1.0"
description = ""
authors = ["Dan Lui"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
black = {version = "^20.8b1", allow-prereleases = true}
python-box = "^5.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
